@@ -1,3 +1,9 @@
+26/03/2011 Changes
+
+Refactoring grammar to not have backtrace. This is a work in progress and the grammar may not work
+until it is complete!
+
+
 19/03/2011 Changes
 
 Adding grammar fragments to support full/edge case Smalltalk-80 grammar.
